# Sphere-Light-Render-ComfyUI

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE.md  README.md  __init__.py  pyproject.toml  render_bridge.py
.github/workflows/: tests.yml
docs/superpowers/plans/: 2026-07-08-input-driven-sphere-light.md
docs/superpowers/specs/: 2026-07-05-time-of-day-sun-design.md  2026-07-11-photo-exif-node-design.md
js/: integration.test.js  location_search.js  mode.js  mode.test.js  nodes.js  preview.js  sphere_widget.js  status.js  status.test.js  widgets.js
tests/: widgets.test.js
tools/: test_comfy_load.py  test_decode.py  test_new_nodes.py  test_photo_exif.py  test_render_bridge.py
